コードブロック整形

--- a/htmlcss/used.html
+++ b/htmlcss/used.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My note</title>
+  <title>My note | Web</title>
 
   <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
@@ -21,13 +21,18 @@
 
       <section class="contents">
         <h3 class="contents__ttl">grid</h3>
-        <pre class="code css"><code>display: grid;
+
+        <div class="code-block">
+          <span class="code-lang">CSS</span>
+          <pre class="code"><code>
+display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-gap: 0 28px;
-</code></pre>
+          </code></pre>
+        </div>
 
         <h3 class="contents__ttl">flex</h3>
-        <pre class="code css"><code>display: flex;
+        <pre class="code"><code>display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;
