--- a/htmlcss/used.html
+++ b/htmlcss/used.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My note | Web</title>
+  <title>My note | よく使うコードテンプレ</title>
 
   <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
   <header class="header">
-    <h1 class="header__logo">My Note</h1>
+    <h1 class="header__logo"><a href="/">My Note</a></h1>
 
   </header>
   <main>
@@ -55,6 +55,18 @@ flex-direction: column;
 align-items: center;
 justify-content: center;</code></pre>
         </div>
+        <p>
+          <b>align-item: baseline;</b><br>使用すると、
+          チェックボックス・ラジオボタンとテキストを揃えることができる
+        </p>
+        <figure>
+          <img src="../img/flex-baseline.png" alt="" style="width: 60%;">
+          <figcaption>
+            <a href="https://coliss.com/articles/build-websites/operation/css/flexbox-align-checkbox-with-text.html">
+              参考：coliss
+              </a>
+          </figcaption>
+        </figure>
 
         <h3 class="contents__ttl">position</h3>
         <div class="code-block">
