--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
 <title>My note</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.7.0/marked.js"></script>  
 
+
+
 <div type="text/plain" id="mdContent">
+
 
 ## 目次
 ### html/css
 * [よく使う](./htmlcss/used.html)
+* [こんな時](./htmlcss/case.html)
+* [新しい書き方](./htmlcss/new.html)
 
 参考：
 https://beta-notes.way-nifty.com/blog/2019/08/post-2d8bae.html
