--- a/htmlcss/new.html
+++ b/htmlcss/new.html
@@ -12,7 +12,11 @@
 
 <body>
   <header class="header">
-    <h1 class="header__logo"><a href="/">My Note</a></h1>
+    <h1 class="header__logo">
+      <a href="/">
+        <object type="image/svg+xml" data="/img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
+      </a>
+    </h1>
 
   </header>
   <main>
