ヘッダーナビ追加

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.7.0/marked.js"></script>  
 
 
-
 <div type="text/plain" id="mdContent">
 
 
 ## 目次
-### html/css
-* [よく使う](./htmlcss/used.html)
-* [こんな時](./htmlcss/case.html)
-* [新しい書き方](./htmlcss/new.html)
+### html/cssd
+* [よく使う](./web/used.html)
+* [こんな時](./web/case.html)
+* [新しい書き方](./web/new.html)
 
 参考：
 https://beta-notes.way-nifty.com/blog/2019/08/post-2d8bae.html
