--- a/web/case.html
+++ b/web/case.html
@@ -17,7 +17,13 @@
         <object type="image/svg+xml" data="/img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
       </a>
     </h1>
-
+    <nav class="header__nav">
+      <ul>
+        <li><a href="./used.html">よく使う</a></li>
+        <li><a href="./case.html">こんな時</a></li>
+        <li><a href="./new.html">キャッチアップ</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <div class="container">
@@ -48,6 +54,17 @@ $(window).on('load',function(){...});
           </code></pre>
         </div>
         <a href="https://twotone.me/web/5207/" target="_blank" rel="noopener">参考</a>
+
+        <h3 class="contents__ttl">
+          要素を非表示にする時
+        </h3>
+        <p>
+          visibility: hidden<br>
+          ・サイズ　あり<br>
+          ・アニメーション　できる<br>
+          ・クリック　できない<br>
+          <b>※子要素で表示・非表示を上書きできる</b>
+        </p>
 
 
         </div>
