--- a/web/new.html
+++ b/web/new.html
@@ -17,6 +17,13 @@
         <object type="image/svg+xml" data="/img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
       </a>
     </h1>
+    <nav class="header__nav">
+      <ul>
+        <li><a href="./used.html">よく使う</a></li>
+        <li><a href="./case.html">こんな時</a></li>
+        <li><a href="./new.html">キャッチアップ</a></li>
+      </ul>
+    </nav>
 
   </header>
   <main>
