ページトップ設置

--- a/web/used.html
+++ b/web/used.html
@@ -133,12 +133,24 @@ writing-mode: vertical-rl;
 writing-mode: horizontal-tb;（初期値）</code></pre>
         </div>
 
-
       </section>
-
 
     </div>
   </main>
+  <footer class="footer">
+    <div class="page-top js-pagetop">
+      <a href="#" class="js-anchor">
+        <p class="page-top__inner">
+          <span class="page-top__item">
+            TOP
+          </span>
+        </p>
+      </a>
+    </div>
+  </footer>
+
+  <script src="../js/jquery-3.6.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../js/script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
