--- a/web/used.html
+++ b/web/used.html
@@ -16,7 +16,7 @@
   <header class="header">
     <h1 class="header__logo">
       <a href="/">
-        <object type="image/svg+xml" data="/img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
+        <object type="image/svg+xml" data="../img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
       </a>
     </h1>
     <nav class="header__nav">
@@ -149,6 +149,7 @@ writing-mode: horizontal-tb;（初期値）</code></pre>
         </p>
       </a>
     </div>
+    <small class="copy">© My Note</small>
   </footer>
 
   <script src="../js/jquery-3.6.1.min.js" type="text/javascript" charset="utf-8"></script>
