--- a/web/new.html
+++ b/web/new.html
@@ -16,7 +16,7 @@
   <header class="header">
     <h1 class="header__logo">
       <a href="/">
-        <object type="image/svg+xml" data="/img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
+        <object type="image/svg+xml" data="../img/mynote-logo.svg" width="500" height="124" alt="My Note"></object>
       </a>
     </h1>
     <nav class="header__nav">
@@ -57,8 +57,21 @@
 
     </div>
   </main>
+  <footer class="footer">
+    <div class="page-top js-pagetop">
+      <a href="#" class="js-anchor">
+        <p class="page-top__inner">
+          <span class="page-top__item">
+            TOP
+          </span>
+        </p>
+      </a>
+    </div>
+    <small class="copy">© My Note</small>
+  </footer>
 
-
+  <script src="../js/jquery-3.6.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../js/script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
